@@ -1,9 +1,13 @@
 package faang.school.postservice.service.comment;
 
 import faang.school.postservice.dto.comment.CommentDto;
+import faang.school.postservice.dto.publishable.fornewsfeed.FeedCommentDeleteEvent;
+import faang.school.postservice.dto.publishable.fornewsfeed.FeedCommentEvent;
 import faang.school.postservice.mapper.comment.CommentMapper;
 import faang.school.postservice.model.Comment;
 import faang.school.postservice.repository.CommentRepository;
+import faang.school.postservice.service.feed.CacheService;
+import faang.school.postservice.service.feed.FeedEventService;
 import faang.school.postservice.validator.comment.CommentValidator;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -17,37 +21,31 @@ import java.util.List;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutorService;
 import java.util.stream.Collectors;
-import java.util.stream.IntStream;
 
 @Service
+@RequiredArgsConstructor
 public class CommentService {
     private final CommentRepository commentRepository;
     private final CommentMapper commentMapper;
     private final CommentValidator commentValidator;
     private final ModerationDictionary moderationDictionary;
+    @Qualifier("moderation-thread-pool")
     private final ExecutorService moderationExecutor;
+    private final FeedEventService feedEventService;
+    private final CacheService cacheService;
 
     @Value("${comment.batchSize}")
     private int batchSize;
-
-    public CommentService(
-            CommentRepository commentRepository,
-            CommentMapper commentMapper,
-            CommentValidator commentValidator,
-            ModerationDictionary moderationDictionary,
-            @Qualifier("moderation-thread-pool") ExecutorService moderationExecutor
-    ) {
-        this.commentRepository = commentRepository;
-        this.commentMapper = commentMapper;
-        this.commentValidator = commentValidator;
-        this.moderationDictionary = moderationDictionary;
-        this.moderationExecutor = moderationExecutor;
-    }
 
     @Transactional
     public CommentDto createComment(Long postId, CommentDto commentDto) {
         commentValidator.findPostById(postId);
         Comment savedComment = commentRepository.save(commentMapper.toEntity(commentDto));
+
+        feedEventService.createAndSendFeedCommentEvent(new FeedCommentEvent(
+                commentDto.getId(), commentDto.getPostId(), commentDto.getAuthorId(), commentDto.getContent()));
+        cacheService.addUserToCache(savedComment.getAuthorId());
+
         return commentMapper.toDto(savedComment);
     }
 
@@ -57,6 +55,10 @@ public class CommentService {
         Comment comment = commentValidator.findCommentById(commentId);
         commentValidator.checkUserRightsToChangeComment(comment, commentDto);
         comment.setContent(commentDto.getContent());
+
+        feedEventService.createAndSendFeedCommentEvent(new FeedCommentEvent(
+                commentDto.getId(), commentDto.getPostId(), commentDto.getAuthorId(), commentDto.getContent()));
+
         return commentMapper.toDto(commentRepository.save(comment));
     }
 
@@ -66,13 +68,18 @@ public class CommentService {
         List<Comment> comments = commentRepository.findAllByPostIdSorted(postId);
         return comments.stream()
                 .map(commentMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public void deleteComment(Long commentId) {
-        commentValidator.findCommentById(commentId);
+        Comment comment = commentValidator.findCommentById(commentId);
         commentRepository.deleteById(commentId);
+
+        if (comment != null) {
+            feedEventService.createAndSendFeedCommentDeleteEvent(
+                    new FeedCommentDeleteEvent(comment.getId(), comment.getPost().getId()));
+        }
     }
 
     @Transactional
@@ -83,7 +90,7 @@ public class CommentService {
 
         List<CompletableFuture<Void>> futures = partitions.stream()
                 .map(this::moderatePartition)
-                .collect(Collectors.toList());
+                .toList();
 
         CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
     }
